<resources>
    <string name="app_name">Garmin-Heartrate</string>
    <string name="action_settings">Settings</string>
    <string name="hint_firstName">Firstname...</string>
    <string name="hint_lastName">Lastname...</string>
    <string name="hint_height">Height in cm...</string>
    <string name="hint_weight">Weight in kg...</string>
    <string name="hint_age">Age...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">User not saved because it is not complete.</string>
    <string name="title_activity_user_detail">User Details</string>
    <string name="add_user">Add new User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_user">Loading users</string>
    <string name="loading_sessions">loading sessions</string>
    <string name="connect_device_title">Add new devices through the Garmin Connect mobile app</string>
    <string name="devices_button_title">Save</string>
    <string name="format">%1$td.%1$tm.%1$tY - %1$tH:%1$tM:%1$tS</string>
    <string name="format_heartRate">HeartRate: %1$s bpm</string>
    <string name="format_speed">Speed: %1$s m/s</string>
    <string name="format_cadence">Cadence: %1$s rpm</string>
    <string name="format_temperature">Temperature: %1$s °C</string>
    <string name="format_altitude">Altitude: %1$s m</string>
    <string name="format_pressure">Pressure: %1$s Pa</string>
    <string name="format_heading">Heading: %1$s °</string>
    <string name="format_age">Age: %1$s</string>
    <string name="format_weight">Weight: %1$s kg</string>
    <string name="format_height">Height: %1$s cm</string>
</resources>